Add character encoding filter to FRED to make UTF8 actually work.
git-svn-id: file:///repo/applications/FRED/trunk@46646 976ac4c7-77c1-46cc-9d05-16a3bd20634c